Update evilpoison homepage

--- a/doc/README
+++ b/doc/README
@@ -3,9 +3,9 @@ evilpoison <unreleased> by
   Clive Crous <clive@darkarts.co.za>
 
 EvilPoison is a window manager based on evilwm's source code. For the latest
-evilpoison information you should check the wiki at:
+evilpoison information you should check it's homepage at:
 
-  http://www.darkarts.co.za/projects/evilpoison.
+  http://clivecrous.lighthouseapp.com/projects/11269/home
 
 Below follows the evilwm README information, be warned that much of what it
 says about evilwm is no longer applicable for evilpoison.
